--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,23 @@
 body {
+  padding: 50px;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+.list-group-item{
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+}
+p{
+  cursor:pointer;
+  margin: 0;
+}
+.complete{
+  text-decoration: line-through;
 }
 
 code {
